feat(diskless): add managed replicas routing to metadata transformer (#504)
* refactor(metadata): change MetadataView.getAliveBrokerNodes to return List

Change return type from Iterable<Node> to List<Node> for simpler
downstream usage.
The underlying KRaftMetadataCache already returns a List, so this
removes unnecessary abstraction.

* feat(metadata): add isRemoteStorageEnabled to MetadataView

Add MetadataView.isRemoteStorageEnabled() to check topic tiering
config, needed for managed replicas routing decisions.

* feat(metadata): add managed replicas routing and transformer metrics

Add support for managed replicas (RF > 1) in diskless topic metadata
transformation:

- For managed replicas, routing priority depends on remote storage:
  - Tiered (remote storage enabled): same-AZ replica > cross-AZ replica
    > unavailable
  - Diskless-only: same-AZ replica > same-AZ any broker > cross-AZ
    replica > cross-AZ any broker
- For unmanaged replicas (RF=1), preserve legacy hash-based selection
- Lazy-init alive broker snapshot to avoid unnecessary calls when no
  diskless topics are in the response

Add metrics to track routing behavior and remove per-partition logging
in favor of metrics for sustained observability:

- fallback-total: Count of fallbacks to non-replica brokers
  (diskless-only)
- offline-replicas-routed-around: Routing decisions when some replicas
  are offline
- cross-az-routing-total: Requests routed to a different AZ than the
  client

Update existing tests to use RF=1 to preserve original unmanaged
behavior.

Existing logging removed to rely on introduced metrics for Diskless
partitions.

* fixup! feat(metadata): add managed replicas routing and transformer metrics

* fixup! feat(metadata): add managed replicas routing and transformer metrics