@@ -17,7 +17,7 @@
  */
 package io.aiven.inkless.metadata;
 
-import org.apache.kafka.admin.BrokerMetadata;
+import org.apache.kafka.common.Node;
 import org.apache.kafka.common.Uuid;
 import org.apache.kafka.common.message.DescribeTopicPartitionsResponseData;
 import org.apache.kafka.common.message.DescribeTopicPartitionsResponseData.DescribeTopicPartitionsResponsePartition;
@@ -25,6 +25,9 @@ import org.apache.kafka.common.message.DescribeTopicPartitionsResponseData.Descr
 import org.apache.kafka.common.message.DescribeTopicPartitionsResponseData.DescribeTopicPartitionsResponseTopicCollection;
 import org.apache.kafka.common.message.MetadataResponseData.MetadataResponsePartition;
 import org.apache.kafka.common.message.MetadataResponseData.MetadataResponseTopic;
+import org.apache.kafka.common.network.ListenerName;
+import org.apache.kafka.common.protocol.Errors;
+import org.apache.kafka.common.security.auth.SecurityProtocol;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
@@ -41,7 +44,6 @@ import org.mockito.quality.Strictness;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 import java.util.function.Supplier;
 
 import io.aiven.inkless.control_plane.MetadataView;
@@ -59,6 +61,7 @@ class InklessTopicMetadataTransformerTest {
     static final Uuid TOPIC_DISKLESS_ID = new Uuid(123, 123);
     static final String TOPIC_CLASSIC = "classic-topic";
     static final Uuid TOPIC_CLASSIC_ID = new Uuid(456, 456);
+    static final ListenerName LISTENER_NAME = ListenerName.forSecurityProtocol(SecurityProtocol.PLAINTEXT);
 
     @Mock
     MetadataView metadataView;
@@ -70,10 +73,10 @@ class InklessTopicMetadataTransformerTest {
             .hasMessage("metadataView cannot be null");
 
         final var transformer = new InklessTopicMetadataTransformer(metadataView);
-        assertThatThrownBy(() -> transformer.transformClusterMetadata("x", null))
+        assertThatThrownBy(() -> transformer.transformClusterMetadata(LISTENER_NAME, "x", null))
             .isInstanceOf(NullPointerException.class)
             .hasMessage("topicMetadata cannot be null");
-        assertThatThrownBy(() -> transformer.transformDescribeTopicResponse("x", null))
+        assertThatThrownBy(() -> transformer.transformDescribeTopicResponse(LISTENER_NAME, "x", null))
             .isInstanceOf(NullPointerException.class)
             .hasMessage("responseData cannot be null");
     }
@@ -87,7 +90,7 @@ class InklessTopicMetadataTransformerTest {
             final var transformer = new InklessTopicMetadataTransformer(metadataView);
 
             final List<MetadataResponseTopic> topicMetadata = List.of();
-            transformer.transformClusterMetadata(clientId, topicMetadata);
+            transformer.transformClusterMetadata(LISTENER_NAME, clientId, topicMetadata);
             assertThat(topicMetadata).isEmpty();
         }
 
@@ -98,7 +101,7 @@ class InklessTopicMetadataTransformerTest {
             final var transformer = new InklessTopicMetadataTransformer(metadataView);
 
             final DescribeTopicPartitionsResponseData describeResponse = new DescribeTopicPartitionsResponseData();
-            transformer.transformDescribeTopicResponse(clientId, describeResponse);
+            transformer.transformDescribeTopicResponse(LISTENER_NAME, clientId, describeResponse);
             assertThat(describeResponse).isEqualTo(new DescribeTopicPartitionsResponseData());
         }
     }
@@ -109,11 +112,11 @@ class InklessTopicMetadataTransformerTest {
         void setup() {
             when(metadataView.isDisklessTopic(eq(TOPIC_DISKLESS))).thenReturn(true);
             when(metadataView.isDisklessTopic(eq(TOPIC_CLASSIC))).thenReturn(false);
-            when(metadataView.getAliveBrokers()).thenReturn(List.of(
-                new BrokerMetadata(0, Optional.of("az0")),
-                new BrokerMetadata(2, Optional.of("az0")),
-                new BrokerMetadata(1, Optional.of("az1")),
-                new BrokerMetadata(3, Optional.of("az1"))
+            when(metadataView.getAliveBrokerNodes(LISTENER_NAME)).thenReturn(List.of(
+                new Node(0, "host", 9092, "az0"),
+                new Node(2, "host", 9094, "az0"),
+                new Node(1, "host", 9093, "az1"),
+                new Node(3, "host", 9095, "az1")
             ));
         }
 
@@ -135,25 +138,25 @@ class InklessTopicMetadataTransformerTest {
                             .setPartitionIndex(0)
                             .setErrorCode((short) 0)
                             .setLeaderId(-1)
-                            .setReplicaNodes(List.of(1, 2, 3, 4))
-                            .setIsrNodes(List.of(1, 2))
-                            .setOfflineReplicas(List.of(3, 4))
+                            .setReplicaNodes(List.of(1))  // RF=1 (unmanaged)
+                            .setIsrNodes(List.of(1))
+                            .setOfflineReplicas(Collections.emptyList())
                             .setLeaderEpoch(0),
                         new MetadataResponsePartition()
                             .setPartitionIndex(1)
                             .setErrorCode((short) 0)
                             .setLeaderId(-1)
-                            .setReplicaNodes(List.of(1, 2, 3, 4))
-                            .setIsrNodes(List.of(1, 2))
-                            .setOfflineReplicas(List.of(3, 4))
+                            .setReplicaNodes(List.of(1))  // RF=1 (unmanaged)
+                            .setIsrNodes(List.of(1))
+                            .setOfflineReplicas(Collections.emptyList())
                             .setLeaderEpoch(0),
                         new MetadataResponsePartition()
                             .setPartitionIndex(2)
                             .setErrorCode((short) 0)
                             .setLeaderId(-1)
-                            .setReplicaNodes(List.of(1, 2, 3, 4))
-                            .setIsrNodes(List.of(1, 2))
-                            .setOfflineReplicas(List.of(3, 4))
+                            .setReplicaNodes(List.of(1))  // RF=1 (unmanaged)
+                            .setIsrNodes(List.of(1))
+                            .setOfflineReplicas(Collections.emptyList())
                             .setLeaderEpoch(0)
                     ));
 
@@ -167,9 +170,9 @@ class InklessTopicMetadataTransformerTest {
                             .setPartitionIndex(0)
                             .setErrorCode((short) 0)
                             .setLeaderId(-10)
-                            .setReplicaNodes(List.of(1, 2, 3, 4))
-                            .setIsrNodes(List.of(1, 2))
-                            .setOfflineReplicas(List.of(3, 4))
+                            .setReplicaNodes(List.of(1))
+                            .setIsrNodes(List.of(1))
+                            .setOfflineReplicas(Collections.emptyList())
                     ));
 
             final List<MetadataResponseTopic> topicMetadata = List.of(
@@ -178,7 +181,7 @@ class InklessTopicMetadataTransformerTest {
             );
             final var transformer = new InklessTopicMetadataTransformer(metadataView);
 
-            transformer.transformClusterMetadata("diskless_az=" + clientAZ, topicMetadata);
+            transformer.transformClusterMetadata(LISTENER_NAME, "diskless_az=" + clientAZ, topicMetadata);
 
             final var expectedInklessTopicMetadata = inklessTopicMetadata.get();
             setExpectedLeaderCluster(expectedInklessTopicMetadata.partitions().get(0), expectedLeaderId1);
@@ -189,7 +192,7 @@ class InklessTopicMetadataTransformerTest {
             assertThat(topicMetadata.get(1)).isEqualTo(classicTopicMetadata.get());
 
             // Check that rotation does not happen by transforming again.
-            transformer.transformClusterMetadata("diskless_az=" + clientAZ, topicMetadata);
+            transformer.transformClusterMetadata(LISTENER_NAME, "diskless_az=" + clientAZ, topicMetadata);
             assertThat(topicMetadata.get(0)).isEqualTo(expectedInklessTopicMetadata);
             assertThat(topicMetadata.get(1)).isEqualTo(classicTopicMetadata.get());
         }
@@ -212,9 +215,9 @@ class InklessTopicMetadataTransformerTest {
                             .setPartitionIndex(0)
                             .setErrorCode((short) 0)
                             .setLeaderId(-1)
-                            .setReplicaNodes(List.of(1, 2, 3, 4))
-                            .setIsrNodes(List.of(1, 2))
-                            .setOfflineReplicas(List.of(3, 4))
+                            .setReplicaNodes(List.of(1))  // RF=1 (unmanaged)
+                            .setIsrNodes(List.of(1))
+                            .setOfflineReplicas(Collections.emptyList())
                             .setEligibleLeaderReplicas(List.of(10, 11))
                             .setLastKnownElr(List.of(10, 11))
                             .setLeaderEpoch(0),
@@ -222,9 +225,9 @@ class InklessTopicMetadataTransformerTest {
                             .setPartitionIndex(1)
                             .setErrorCode((short) 0)
                             .setLeaderId(-1)
-                            .setReplicaNodes(List.of(1, 2, 3, 4))
-                            .setIsrNodes(List.of(1, 2))
-                            .setOfflineReplicas(List.of(3, 4))
+                            .setReplicaNodes(List.of(1))  // RF=1 (unmanaged)
+                            .setIsrNodes(List.of(1))
+                            .setOfflineReplicas(Collections.emptyList())
                             .setEligibleLeaderReplicas(List.of(10, 11))
                             .setLastKnownElr(List.of(10, 11))
                             .setLeaderEpoch(0),
@@ -232,9 +235,9 @@ class InklessTopicMetadataTransformerTest {
                             .setPartitionIndex(2)
                             .setErrorCode((short) 0)
                             .setLeaderId(-1)
-                            .setReplicaNodes(List.of(1, 2, 3, 4))
-                            .setIsrNodes(List.of(1, 2))
-                            .setOfflineReplicas(List.of(3, 4))
+                            .setReplicaNodes(List.of(1))  // RF=1 (unmanaged)
+                            .setIsrNodes(List.of(1))
+                            .setOfflineReplicas(Collections.emptyList())
                             .setEligibleLeaderReplicas(List.of(10, 11))
                             .setLastKnownElr(List.of(10, 11))
                             .setLeaderEpoch(0)
@@ -250,9 +253,9 @@ class InklessTopicMetadataTransformerTest {
                             .setPartitionIndex(0)
                             .setErrorCode((short) 0)
                             .setLeaderId(-10)
-                            .setReplicaNodes(List.of(1, 2, 3, 4))
-                            .setIsrNodes(List.of(1, 2))
-                            .setOfflineReplicas(List.of(3, 4))
+                            .setReplicaNodes(List.of(1))
+                            .setIsrNodes(List.of(1))
+                            .setOfflineReplicas(Collections.emptyList())
                             .setEligibleLeaderReplicas(List.of(10, 11))
                             .setLastKnownElr(List.of(10, 11))
                             .setLeaderEpoch(0)
@@ -266,7 +269,7 @@ class InklessTopicMetadataTransformerTest {
                     ).iterator()));
             final var transformer = new InklessTopicMetadataTransformer(metadataView);
 
-            transformer.transformDescribeTopicResponse("diskless_az=" + clientAZ, describeResponse);
+            transformer.transformDescribeTopicResponse(LISTENER_NAME, "diskless_az=" + clientAZ, describeResponse);
 
             final var expectedInklessTopicMetadata = inklessTopicMetadata.get();
             setExpectedLeaderDescribeTopicResponse(expectedInklessTopicMetadata.partitions().get(0), expectedLeaderId1);
@@ -277,7 +280,7 @@ class InklessTopicMetadataTransformerTest {
             assertThat(describeResponse.topics().find(TOPIC_CLASSIC)).isEqualTo(classicTopicMetadata.get());
 
             // Check that rotation does not happen by transforming again.
-            transformer.transformDescribeTopicResponse("diskless_az=" + clientAZ, describeResponse);
+            transformer.transformDescribeTopicResponse(LISTENER_NAME, "diskless_az=" + clientAZ, describeResponse);
             assertThat(describeResponse.topics().find(TOPIC_DISKLESS)).isEqualTo(expectedInklessTopicMetadata);
             assertThat(describeResponse.topics().find(TOPIC_CLASSIC)).isEqualTo(classicTopicMetadata.get());
         }
@@ -288,9 +291,9 @@ class InklessTopicMetadataTransformerTest {
         @BeforeEach
         void setup() {
             when(metadataView.isDisklessTopic(eq(TOPIC_DISKLESS))).thenReturn(true);
-            when(metadataView.getAliveBrokers()).thenReturn(List.of(
-                new BrokerMetadata(1, Optional.empty()),
-                new BrokerMetadata(0, Optional.empty())
+            when(metadataView.getAliveBrokerNodes(LISTENER_NAME)).thenReturn(List.of(
+                new Node(1, "host", 9093),
+                new Node(0, "host", 9092)
             ));
         }
 
@@ -306,21 +309,21 @@ class InklessTopicMetadataTransformerTest {
                             .setPartitionIndex(0)
                             .setErrorCode((short) 0)
                             .setLeaderId(-1)
-                            .setReplicaNodes(List.of(1, 2, 3, 4))
-                            .setIsrNodes(List.of(1, 2))
-                            .setOfflineReplicas(List.of(3, 4))
+                            .setReplicaNodes(List.of(1))  // RF=1 (unmanaged)
+                            .setIsrNodes(List.of(1))
+                            .setOfflineReplicas(Collections.emptyList())
                             .setLeaderEpoch(0)
                     ));
 
             final List<MetadataResponseTopic> topicMetadata = List.of(inklessTopicMetadata.get());
             final var transformer = new InklessTopicMetadataTransformer(metadataView);
 
-            transformer.transformClusterMetadata("diskless_az=az0", topicMetadata);
+            transformer.transformClusterMetadata(LISTENER_NAME, "diskless_az=az0", topicMetadata);
             final var expectedInklessTopicMetadata = inklessTopicMetadata.get();
             setExpectedLeaderCluster(expectedInklessTopicMetadata.partitions().get(0), 0);
             assertThat(topicMetadata.get(0)).isEqualTo(expectedInklessTopicMetadata);
 
-            transformer.transformClusterMetadata("diskless_az=az0", topicMetadata);
+            transformer.transformClusterMetadata(LISTENER_NAME, "diskless_az=az0", topicMetadata);
             setExpectedLeaderCluster(expectedInklessTopicMetadata.partitions().get(0), 0);
             assertThat(topicMetadata.get(0)).isEqualTo(expectedInklessTopicMetadata);
         }
@@ -339,9 +342,9 @@ class InklessTopicMetadataTransformerTest {
                                     .setPartitionIndex(0)
                                     .setErrorCode((short) 0)
                                     .setLeaderId(-1)
-                                    .setReplicaNodes(List.of(1, 2, 3, 4))
-                                    .setIsrNodes(List.of(1, 2))
-                                    .setOfflineReplicas(List.of(3, 4))
+                                    .setReplicaNodes(List.of(1))  // RF=1 (unmanaged)
+                                    .setIsrNodes(List.of(1))
+                                    .setOfflineReplicas(Collections.emptyList())
                                     .setEligibleLeaderReplicas(List.of(10, 11))
                                     .setLastKnownElr(List.of(10, 11))
                                     .setLeaderEpoch(0)
@@ -351,13 +354,13 @@ class InklessTopicMetadataTransformerTest {
             final var transformer = new InklessTopicMetadataTransformer(metadataView);
 
             final DescribeTopicPartitionsResponseData describeResponse = describeResponseSupplier.get();
-            transformer.transformDescribeTopicResponse("diskless_az=az0", describeResponse);
+            transformer.transformDescribeTopicResponse(LISTENER_NAME, "diskless_az=az0", describeResponse);
 
             final var expectedDescribeResponse = describeResponseSupplier.get();
             setExpectedLeaderDescribeTopicResponse(expectedDescribeResponse.topics().find(TOPIC_DISKLESS).partitions().get(0), 0);
             assertThat(describeResponse).isEqualTo(expectedDescribeResponse);
 
-            transformer.transformDescribeTopicResponse("diskless_az=az0", describeResponse);
+            transformer.transformDescribeTopicResponse(LISTENER_NAME, "diskless_az=az0", describeResponse);
             setExpectedLeaderDescribeTopicResponse(expectedDescribeResponse.topics().find(TOPIC_DISKLESS).partitions().get(0), 0);
             assertThat(describeResponse).isEqualTo(expectedDescribeResponse);
         }
@@ -368,9 +371,9 @@ class InklessTopicMetadataTransformerTest {
         @BeforeEach
         void setup() {
             when(metadataView.isDisklessTopic(eq(TOPIC_DISKLESS))).thenReturn(true);
-            when(metadataView.getAliveBrokers()).thenReturn(List.of(
-                new BrokerMetadata(1, Optional.of("az1")),
-                new BrokerMetadata(0, Optional.of("az0"))
+            when(metadataView.getAliveBrokerNodes(LISTENER_NAME)).thenReturn(List.of(
+                new Node(1, "host", 9093, "az1"),
+                new Node(0, "host", 9092, "az0")
             ));
         }
 
@@ -386,21 +389,21 @@ class InklessTopicMetadataTransformerTest {
                             .setPartitionIndex(0)
                             .setErrorCode((short) 0)
                             .setLeaderId(-1)
-                            .setReplicaNodes(List.of(1, 2, 3, 4))
-                            .setIsrNodes(List.of(1, 2))
-                            .setOfflineReplicas(List.of(3, 4))
+                            .setReplicaNodes(List.of(1))  // RF=1 (unmanaged)
+                            .setIsrNodes(List.of(1))
+                            .setOfflineReplicas(Collections.emptyList())
                             .setLeaderEpoch(0)
                     ));
 
             final List<MetadataResponseTopic> topicMetadata = List.of(inklessTopicMetadata.get());
             final var transformer = new InklessTopicMetadataTransformer(metadataView);
 
-            transformer.transformClusterMetadata(null, topicMetadata);
+            transformer.transformClusterMetadata(LISTENER_NAME, null, topicMetadata);
             final var expectedInklessTopicMetadata = inklessTopicMetadata.get();
             setExpectedLeaderCluster(expectedInklessTopicMetadata.partitions().get(0), 0);
             assertThat(topicMetadata.get(0)).isEqualTo(expectedInklessTopicMetadata);
 
-            transformer.transformClusterMetadata(null, topicMetadata);
+            transformer.transformClusterMetadata(LISTENER_NAME, null, topicMetadata);
             setExpectedLeaderCluster(expectedInklessTopicMetadata.partitions().get(0), 0);
             assertThat(topicMetadata.get(0)).isEqualTo(expectedInklessTopicMetadata);
         }
@@ -419,9 +422,9 @@ class InklessTopicMetadataTransformerTest {
                                     .setPartitionIndex(0)
                                     .setErrorCode((short) 0)
                                     .setLeaderId(-1)
-                                    .setReplicaNodes(List.of(1, 2, 3, 4))
-                                    .setIsrNodes(List.of(1, 2))
-                                    .setOfflineReplicas(List.of(3, 4))
+                                    .setReplicaNodes(List.of(1))  // RF=1 (unmanaged)
+                                    .setIsrNodes(List.of(1))
+                                    .setOfflineReplicas(Collections.emptyList())
                                     .setEligibleLeaderReplicas(List.of(10, 11))
                                     .setLastKnownElr(List.of(10, 11))
                                     .setLeaderEpoch(0)
@@ -431,13 +434,13 @@ class InklessTopicMetadataTransformerTest {
             final var transformer = new InklessTopicMetadataTransformer(metadataView);
             final DescribeTopicPartitionsResponseData describeResponse = describeResponseSupplier.get();
 
-            transformer.transformDescribeTopicResponse(null, describeResponse);
+            transformer.transformDescribeTopicResponse(LISTENER_NAME, null, describeResponse);
 
             final var expectedDescribeResponse = describeResponseSupplier.get();
             setExpectedLeaderDescribeTopicResponse(expectedDescribeResponse.topics().find(TOPIC_DISKLESS).partitions().get(0), 0);
             assertThat(describeResponse).isEqualTo(expectedDescribeResponse);
 
-            transformer.transformDescribeTopicResponse(null, describeResponse);
+            transformer.transformDescribeTopicResponse(LISTENER_NAME, null, describeResponse);
             setExpectedLeaderDescribeTopicResponse(expectedDescribeResponse.topics().find(TOPIC_DISKLESS).partitions().get(0), 0);
             assertThat(describeResponse).isEqualTo(expectedDescribeResponse);
         }
@@ -457,5 +460,487 @@ class InklessTopicMetadataTransformerTest {
         partition.setOfflineReplicas(Collections.emptyList());
         partition.setEligibleLeaderReplicas(Collections.emptyList());
         partition.setLastKnownElr(Collections.emptyList());
+    }
+
+    /**
+     * Tests for managed replicas (RF > 1) with diskless-only mode (remote storage disabled).
+     * Priority: same-AZ replica > same-AZ any broker > cross-AZ replica > cross-AZ any broker
+     */
+    @Nested
+    class ManagedReplicasDisklessOnly {
+        @BeforeEach
+        void setup() {
+            when(metadataView.isDisklessTopic(eq(TOPIC_DISKLESS))).thenReturn(true);
+            when(metadataView.isRemoteStorageEnabled(eq(TOPIC_DISKLESS))).thenReturn(false);
+            when(metadataView.getAliveBrokerNodes(LISTENER_NAME)).thenReturn(List.of(
+                new Node(0, "host", 9092, "az0"),
+                new Node(1, "host", 9093, "az1"),
+                new Node(2, "host", 9094, "az0"),
+                new Node(3, "host", 9095, "az1")
+            ));
+        }
+
+        @Test
+        void clusterMetadata_selectsReplicaInClientAZ() {
+            // Client in az0 should get replica 2 (the only replica in az0)
+            final var topicMetadata = List.of(
+                new MetadataResponseTopic()
+                    .setName(TOPIC_DISKLESS)
+                    .setTopicId(TOPIC_DISKLESS_ID)
+                    .setPartitions(List.of(
+                        new MetadataResponsePartition()
+                            .setPartitionIndex(0)
+                            .setLeaderId(-1)
+                            .setReplicaNodes(List.of(1, 2, 3))  // RF=3 (managed)
+                            .setIsrNodes(List.of(1, 2, 3))
+                            .setOfflineReplicas(Collections.emptyList())
+                    ))
+            );
+
+            final var transformer = new InklessTopicMetadataTransformer(metadataView);
+            transformer.transformClusterMetadata(LISTENER_NAME, "diskless_az=az0", topicMetadata);
+
+            final var partition = topicMetadata.get(0).partitions().get(0);
+            // Leader should be replica 2 (only replica in az0)
+            assertThat(partition.leaderId()).isEqualTo(2);
+            // Replicas should be preserved (real RF)
+            assertThat(partition.replicaNodes()).isEqualTo(List.of(1, 2, 3));
+            // ISR should show alive replicas, offline should be empty (all alive)
+            assertThat(partition.isrNodes()).isEqualTo(List.of(1, 2, 3));
+            assertThat(partition.offlineReplicas()).isEmpty();
+            assertThat(partition.errorCode()).isEqualTo(Errors.NONE.code());
+            assertThat(partition.leaderEpoch()).isEqualTo(0);
+        }
+
+        @Test
+        void clusterMetadata_fallsBackToSameAZNonReplica_whenNoReplicaInClientAZ() {
+            // Client in az0, but no replicas in az0 (replicas are [1, 3] which are in az1)
+            // Should fall back to any broker in az0 (broker 0 or 2)
+            final var topicMetadata = List.of(
+                new MetadataResponseTopic()
+                    .setName(TOPIC_DISKLESS)
+                    .setTopicId(TOPIC_DISKLESS_ID)
+                    .setPartitions(List.of(
+                        new MetadataResponsePartition()
+                            .setPartitionIndex(0)
+                            .setLeaderId(-1)
+                            .setReplicaNodes(List.of(1, 3))  // No replicas in az0
+                            .setIsrNodes(List.of(1, 3))
+                            .setOfflineReplicas(Collections.emptyList())
+                    ))
+            );
+
+            final var transformer = new InklessTopicMetadataTransformer(metadataView);
+            transformer.transformClusterMetadata(LISTENER_NAME, "diskless_az=az0", topicMetadata);
+
+            final var partition = topicMetadata.get(0).partitions().get(0);
+            // Leader should be a broker in az0 (0 or 2)
+            assertThat(partition.leaderId()).isIn(0, 2);
+            // Replicas should be preserved
+            assertThat(partition.replicaNodes()).isEqualTo(List.of(1, 3));
+            // ISR should show alive replicas
+            assertThat(partition.isrNodes()).isEqualTo(List.of(1, 3));
+            assertThat(partition.offlineReplicas()).isEmpty();
+            assertThat(partition.errorCode()).isEqualTo(Errors.NONE.code());
+            assertThat(partition.leaderEpoch()).isEqualTo(0);
+        }
+
+        @Test
+        void clusterMetadata_fallsBackToCrossAZReplica_whenNoSameAZBrokers() {
+            // All brokers in az1, client in az0
+            when(metadataView.getAliveBrokerNodes(LISTENER_NAME)).thenReturn(List.of(
+                new Node(1, "host", 9093, "az1"),
+                new Node(3, "host", 9095, "az1")
+            ));
+
+            final var topicMetadata = List.of(
+                new MetadataResponseTopic()
+                    .setName(TOPIC_DISKLESS)
+                    .setTopicId(TOPIC_DISKLESS_ID)
+                    .setPartitions(List.of(
+                        new MetadataResponsePartition()
+                            .setPartitionIndex(0)
+                            .setLeaderId(-1)
+                            .setReplicaNodes(List.of(1, 3))
+                            .setIsrNodes(List.of(1, 3))
+                            .setOfflineReplicas(Collections.emptyList())
+                    ))
+            );
+
+            final var transformer = new InklessTopicMetadataTransformer(metadataView);
+            transformer.transformClusterMetadata(LISTENER_NAME, "diskless_az=az0", topicMetadata);
+
+            final var partition = topicMetadata.get(0).partitions().get(0);
+            // Leader should be a cross-AZ replica (1 or 3)
+            assertThat(partition.leaderId()).isIn(1, 3);
+            assertThat(partition.errorCode()).isEqualTo(Errors.NONE.code());
+            assertThat(partition.leaderEpoch()).isEqualTo(0);
+        }
+
+        @Test
+        void clusterMetadata_fallsBackToAnyAliveBroker_whenAllReplicasOffline() {
+            // Diskless-only: replicas [1, 3] are offline, but brokers [0, 2] are alive
+            when(metadataView.getAliveBrokerNodes(LISTENER_NAME)).thenReturn(List.of(
+                new Node(0, "host", 9092, "az0"),
+                new Node(2, "host", 9094, "az0")
+            ));
+
+            final var topicMetadata = List.of(
+                new MetadataResponseTopic()
+                    .setName(TOPIC_DISKLESS)
+                    .setTopicId(TOPIC_DISKLESS_ID)
+                    .setPartitions(List.of(
+                        new MetadataResponsePartition()
+                            .setPartitionIndex(0)
+                            .setErrorCode(Errors.LEADER_NOT_AVAILABLE.code())
+                            .setLeaderId(-1)
+                            .setReplicaNodes(List.of(1, 3))
+                            .setIsrNodes(List.of(1, 3))
+                            .setOfflineReplicas(Collections.emptyList())
+                    ))
+            );
+
+            final var transformer = new InklessTopicMetadataTransformer(metadataView);
+            transformer.transformClusterMetadata(LISTENER_NAME, "diskless_az=az0", topicMetadata);
+
+            final var partition = topicMetadata.get(0).partitions().get(0);
+            // Falls back to non-replica broker in same AZ
+            assertThat(partition.leaderId()).isIn(0, 2);
+            // Error code cleared since partition is available via fallback
+            assertThat(partition.errorCode()).isEqualTo(Errors.NONE.code());
+            // ISR empty (no alive replicas), all replicas offline
+            assertThat(partition.isrNodes()).isEmpty();
+            assertThat(partition.offlineReplicas()).containsExactlyInAnyOrder(1, 3);
+            assertThat(partition.replicaNodes()).isEqualTo(List.of(1, 3));
+            assertThat(partition.leaderEpoch()).isEqualTo(0);
+        }
+
+        @Test
+        void describeTopicResponse_selectsReplicaInClientAZ() {
+            final var describeResponse = new DescribeTopicPartitionsResponseData()
+                .setTopics(new DescribeTopicPartitionsResponseTopicCollection(List.of(
+                    new DescribeTopicPartitionsResponseTopic()
+                        .setName(TOPIC_DISKLESS)
+                        .setTopicId(TOPIC_DISKLESS_ID)
+                        .setPartitions(List.of(
+                            new DescribeTopicPartitionsResponsePartition()
+                                .setPartitionIndex(0)
+                                .setLeaderId(-1)
+                                .setReplicaNodes(List.of(1, 2, 3))  // RF=3 (managed)
+                                .setIsrNodes(List.of(1, 2, 3))
+                                .setOfflineReplicas(Collections.emptyList())
+                                .setEligibleLeaderReplicas(List.of(10, 11))
+                                .setLastKnownElr(List.of(10, 11))
+                        ))
+                ).iterator()));
+
+            final var transformer = new InklessTopicMetadataTransformer(metadataView);
+            transformer.transformDescribeTopicResponse(LISTENER_NAME, "diskless_az=az0", describeResponse);
+
+            final var partition = describeResponse.topics().find(TOPIC_DISKLESS).partitions().get(0);
+            assertThat(partition.leaderId()).isEqualTo(2);
+            // Replicas preserved, ISR shows alive replicas
+            assertThat(partition.replicaNodes()).isEqualTo(List.of(1, 2, 3));
+            assertThat(partition.isrNodes()).isEqualTo(List.of(1, 2, 3));
+            // ELR/LKELR cleared for diskless
+            assertThat(partition.eligibleLeaderReplicas()).isEmpty();
+            assertThat(partition.lastKnownElr()).isEmpty();
+            assertThat(partition.errorCode()).isEqualTo(Errors.NONE.code());
+            assertThat(partition.leaderEpoch()).isEqualTo(0);
+        }
+
+        @Test
+        void describeTopicResponse_fallsBackToSameAZNonReplica() {
+            final var describeResponse = new DescribeTopicPartitionsResponseData()
+                .setTopics(new DescribeTopicPartitionsResponseTopicCollection(List.of(
+                    new DescribeTopicPartitionsResponseTopic()
+                        .setName(TOPIC_DISKLESS)
+                        .setTopicId(TOPIC_DISKLESS_ID)
+                        .setPartitions(List.of(
+                            new DescribeTopicPartitionsResponsePartition()
+                                .setPartitionIndex(0)
+                                .setLeaderId(-1)
+                                .setReplicaNodes(List.of(1, 3))  // No replicas in az0
+                                .setIsrNodes(List.of(1, 3))
+                                .setOfflineReplicas(Collections.emptyList())
+                                .setEligibleLeaderReplicas(List.of(10))
+                                .setLastKnownElr(List.of(10))
+                        ))
+                ).iterator()));
+
+            final var transformer = new InklessTopicMetadataTransformer(metadataView);
+            transformer.transformDescribeTopicResponse(LISTENER_NAME, "diskless_az=az0", describeResponse);
+
+            final var partition = describeResponse.topics().find(TOPIC_DISKLESS).partitions().get(0);
+            assertThat(partition.leaderId()).isIn(0, 2);
+            assertThat(partition.replicaNodes()).isEqualTo(List.of(1, 3));
+            assertThat(partition.isrNodes()).isEqualTo(List.of(1, 3));
+            assertThat(partition.eligibleLeaderReplicas()).isEmpty();
+            assertThat(partition.lastKnownElr()).isEmpty();
+            assertThat(partition.offlineReplicas()).isEmpty();
+            assertThat(partition.errorCode()).isEqualTo(Errors.NONE.code());
+            assertThat(partition.leaderEpoch()).isEqualTo(0);
+        }
+    }
+
+    /**
+     * Tests for managed replicas (RF > 1) with tiered mode (remote storage enabled).
+     * Priority: same-AZ replica > cross-AZ replica > unavailable (no fallback to non-replica)
+     */
+    @Nested
+    class ManagedReplicasDisklessTiered {
+        @BeforeEach
+        void setup() {
+            when(metadataView.isDisklessTopic(eq(TOPIC_DISKLESS))).thenReturn(true);
+            when(metadataView.isRemoteStorageEnabled(eq(TOPIC_DISKLESS))).thenReturn(true);
+            when(metadataView.getAliveBrokerNodes(LISTENER_NAME)).thenReturn(List.of(
+                new Node(0, "host", 9092, "az0"),
+                new Node(1, "host", 9093, "az1"),
+                new Node(2, "host", 9094, "az0"),
+                new Node(3, "host", 9095, "az1")
+            ));
+        }
+
+        @Test
+        void clusterMetadata_selectsReplicaInClientAZ() {
+            final var topicMetadata = List.of(
+                new MetadataResponseTopic()
+                    .setName(TOPIC_DISKLESS)
+                    .setTopicId(TOPIC_DISKLESS_ID)
+                    .setPartitions(List.of(
+                        new MetadataResponsePartition()
+                            .setPartitionIndex(0)
+                            .setLeaderId(-1)
+                            .setReplicaNodes(List.of(1, 2, 3))
+                            .setIsrNodes(List.of(1, 2, 3))
+                            .setOfflineReplicas(Collections.emptyList())
+                    ))
+            );
+
+            final var transformer = new InklessTopicMetadataTransformer(metadataView);
+            transformer.transformClusterMetadata(LISTENER_NAME, "diskless_az=az0", topicMetadata);
+
+            final var partition = topicMetadata.get(0).partitions().get(0);
+            assertThat(partition.leaderId()).isEqualTo(2);
+            assertThat(partition.replicaNodes()).isEqualTo(List.of(1, 2, 3));
+            assertThat(partition.isrNodes()).isEqualTo(List.of(1, 2, 3));
+            assertThat(partition.offlineReplicas()).isEmpty();
+            assertThat(partition.errorCode()).isEqualTo(Errors.NONE.code());
+            assertThat(partition.leaderEpoch()).isEqualTo(0);
+        }
+
+        @Test
+        void clusterMetadata_doesNotFallBackToNonReplica_whenNoReplicaInClientAZ() {
+            // Tiered mode must stay on replicas - no fallback to non-replica brokers
+            // Replicas are [1, 3] (az1), client in az0
+            // Should use cross-AZ replica, NOT same-AZ non-replica
+            final var topicMetadata = List.of(
+                new MetadataResponseTopic()
+                    .setName(TOPIC_DISKLESS)
+                    .setTopicId(TOPIC_DISKLESS_ID)
+                    .setPartitions(List.of(
+                        new MetadataResponsePartition()
+                            .setPartitionIndex(0)
+                            .setLeaderId(-1)
+                            .setReplicaNodes(List.of(1, 3))  // No replicas in az0
+                            .setIsrNodes(List.of(1, 3))
+                            .setOfflineReplicas(Collections.emptyList())
+                    ))
+            );
+
+            final var transformer = new InklessTopicMetadataTransformer(metadataView);
+            transformer.transformClusterMetadata(LISTENER_NAME, "diskless_az=az0", topicMetadata);
+
+            final var partition = topicMetadata.get(0).partitions().get(0);
+            // Leader must be a replica (1 or 3), not a non-replica broker (0 or 2)
+            assertThat(partition.leaderId()).isIn(1, 3);
+            assertThat(partition.isrNodes()).isEqualTo(List.of(1, 3));
+            assertThat(partition.offlineReplicas()).isEmpty();
+            assertThat(partition.errorCode()).isEqualTo(Errors.NONE.code());
+            assertThat(partition.leaderEpoch()).isEqualTo(0);
+        }
+
+        @Test
+        void clusterMetadata_partitionUnavailable_whenAllReplicasOffline() {
+            // All replicas offline - partition should be unavailable
+            // Alive brokers are [0, 2], but replicas are [1, 3]
+            when(metadataView.getAliveBrokerNodes(LISTENER_NAME)).thenReturn(List.of(
+                new Node(0, "host", 9092, "az0"),
+                new Node(2, "host", 9094, "az0")
+            ));
+
+            final var topicMetadata = List.of(
+                new MetadataResponseTopic()
+                    .setName(TOPIC_DISKLESS)
+                    .setTopicId(TOPIC_DISKLESS_ID)
+                    .setPartitions(List.of(
+                        new MetadataResponsePartition()
+                            .setPartitionIndex(0)
+                            .setErrorCode(Errors.LEADER_NOT_AVAILABLE.code())  // LEADER_NOT_AVAILABLE
+                            .setLeaderId(-1)
+                            .setReplicaNodes(List.of(1, 3))  // All offline
+                            .setIsrNodes(List.of(1, 3))
+                            .setOfflineReplicas(Collections.emptyList())
+                    ))
+            );
+
+            final var transformer = new InklessTopicMetadataTransformer(metadataView);
+            transformer.transformClusterMetadata(LISTENER_NAME, "diskless_az=az0", topicMetadata);
+
+            final var partition = topicMetadata.get(0).partitions().get(0);
+            // For tiered mode, cannot fall back to non-replica or offline replica
+            // Leader should remain -1 when all replicas are offline
+            assertThat(partition.leaderId()).isEqualTo(-1);
+            // Error code should NOT be NONE since partition is unavailable
+            assertThat(partition.errorCode()).isNotEqualTo(Errors.NONE.code());
+            // ISR should be empty (no alive replicas), offline should show all replicas
+            assertThat(partition.isrNodes()).isEmpty();
+            assertThat(partition.offlineReplicas()).containsExactlyInAnyOrder(1, 3);
+            assertThat(partition.leaderEpoch()).isEqualTo(0);
+        }
+
+        @Test
+        void clusterMetadata_routesToAliveReplica_whenSomeReplicasOffline() {
+            // Replicas [1, 2, 3]: broker 1 is offline (not in alive list)
+            when(metadataView.getAliveBrokerNodes(LISTENER_NAME)).thenReturn(List.of(
+                new Node(0, "host", 9092, "az0"),
+                new Node(2, "host", 9094, "az0"),
+                new Node(3, "host", 9095, "az1")
+            ));
+
+            final var topicMetadata = List.of(
+                new MetadataResponseTopic()
+                    .setName(TOPIC_DISKLESS)
+                    .setTopicId(TOPIC_DISKLESS_ID)
+                    .setPartitions(List.of(
+                        new MetadataResponsePartition()
+                            .setPartitionIndex(0)
+                            .setLeaderId(-1)
+                            .setReplicaNodes(List.of(1, 2, 3))
+                            .setIsrNodes(List.of(1, 2, 3))
+                            .setOfflineReplicas(Collections.emptyList())
+                    ))
+            );
+
+            final var transformer = new InklessTopicMetadataTransformer(metadataView);
+            transformer.transformClusterMetadata(LISTENER_NAME, "diskless_az=az0", topicMetadata);
+
+            final var partition = topicMetadata.get(0).partitions().get(0);
+            // Leader should be alive replica in az0: broker 2
+            assertThat(partition.leaderId()).isEqualTo(2);
+            // ISR should only include alive replicas
+            assertThat(partition.isrNodes()).containsExactlyInAnyOrder(2, 3);
+            // Offline replicas should include broker 1
+            assertThat(partition.offlineReplicas()).containsExactly(1);
+            // Replicas preserved (show real RF)
+            assertThat(partition.replicaNodes()).isEqualTo(List.of(1, 2, 3));
+            assertThat(partition.errorCode()).isEqualTo(Errors.NONE.code());
+            assertThat(partition.leaderEpoch()).isEqualTo(0);
+        }
+
+        @Test
+        void describeTopicResponse_selectsReplicaInClientAZ() {
+            final var describeResponse = new DescribeTopicPartitionsResponseData()
+                .setTopics(new DescribeTopicPartitionsResponseTopicCollection(List.of(
+                    new DescribeTopicPartitionsResponseTopic()
+                        .setName(TOPIC_DISKLESS)
+                        .setTopicId(TOPIC_DISKLESS_ID)
+                        .setPartitions(List.of(
+                            new DescribeTopicPartitionsResponsePartition()
+                                .setPartitionIndex(0)
+                                .setLeaderId(-1)
+                                .setReplicaNodes(List.of(1, 2, 3))
+                                .setIsrNodes(List.of(1, 2, 3))
+                                .setOfflineReplicas(Collections.emptyList())
+                                .setEligibleLeaderReplicas(List.of(10, 11))
+                                .setLastKnownElr(List.of(10, 11))
+                        ))
+                ).iterator()));
+
+            final var transformer = new InklessTopicMetadataTransformer(metadataView);
+            transformer.transformDescribeTopicResponse(LISTENER_NAME, "diskless_az=az0", describeResponse);
+
+            final var partition = describeResponse.topics().find(TOPIC_DISKLESS).partitions().get(0);
+            assertThat(partition.leaderId()).isEqualTo(2);
+            assertThat(partition.replicaNodes()).isEqualTo(List.of(1, 2, 3));
+            assertThat(partition.isrNodes()).isEqualTo(List.of(1, 2, 3));
+            assertThat(partition.offlineReplicas()).isEmpty();
+            assertThat(partition.eligibleLeaderReplicas()).isEmpty();
+            assertThat(partition.lastKnownElr()).isEmpty();
+            assertThat(partition.errorCode()).isEqualTo(Errors.NONE.code());
+            assertThat(partition.leaderEpoch()).isEqualTo(0);
+        }
+
+        @Test
+        void describeTopicResponse_doesNotFallBackToNonReplica() {
+            // Tiered mode: replicas [1, 3] in az1, client in az0 — must use cross-AZ replica
+            final var describeResponse = new DescribeTopicPartitionsResponseData()
+                .setTopics(new DescribeTopicPartitionsResponseTopicCollection(List.of(
+                    new DescribeTopicPartitionsResponseTopic()
+                        .setName(TOPIC_DISKLESS)
+                        .setTopicId(TOPIC_DISKLESS_ID)
+                        .setPartitions(List.of(
+                            new DescribeTopicPartitionsResponsePartition()
+                                .setPartitionIndex(0)
+                                .setLeaderId(-1)
+                                .setReplicaNodes(List.of(1, 3))
+                                .setIsrNodes(List.of(1, 3))
+                                .setOfflineReplicas(Collections.emptyList())
+                                .setEligibleLeaderReplicas(List.of(10))
+                                .setLastKnownElr(List.of(10))
+                        ))
+                ).iterator()));
+
+            final var transformer = new InklessTopicMetadataTransformer(metadataView);
+            transformer.transformDescribeTopicResponse(LISTENER_NAME, "diskless_az=az0", describeResponse);
+
+            final var partition = describeResponse.topics().find(TOPIC_DISKLESS).partitions().get(0);
+            // Must be a replica, not a non-replica broker
+            assertThat(partition.leaderId()).isIn(1, 3);
+            assertThat(partition.isrNodes()).isEqualTo(List.of(1, 3));
+            assertThat(partition.offlineReplicas()).isEmpty();
+            assertThat(partition.eligibleLeaderReplicas()).isEmpty();
+            assertThat(partition.lastKnownElr()).isEmpty();
+            assertThat(partition.errorCode()).isEqualTo(Errors.NONE.code());
+            assertThat(partition.leaderEpoch()).isEqualTo(0);
+        }
+
+        @Test
+        void describeTopicResponse_partitionUnavailable_whenAllReplicasOffline() {
+            when(metadataView.getAliveBrokerNodes(LISTENER_NAME)).thenReturn(List.of(
+                new Node(0, "host", 9092, "az0"),
+                new Node(2, "host", 9094, "az0")
+            ));
+
+            final var describeResponse = new DescribeTopicPartitionsResponseData()
+                .setTopics(new DescribeTopicPartitionsResponseTopicCollection(List.of(
+                    new DescribeTopicPartitionsResponseTopic()
+                        .setName(TOPIC_DISKLESS)
+                        .setTopicId(TOPIC_DISKLESS_ID)
+                        .setPartitions(List.of(
+                            new DescribeTopicPartitionsResponsePartition()
+                                .setPartitionIndex(0)
+                                .setErrorCode(Errors.LEADER_NOT_AVAILABLE.code())
+                                .setLeaderId(-1)
+                                .setReplicaNodes(List.of(1, 3))
+                                .setIsrNodes(List.of(1, 3))
+                                .setOfflineReplicas(Collections.emptyList())
+                                .setEligibleLeaderReplicas(List.of(10))
+                                .setLastKnownElr(List.of(10))
+                        ))
+                ).iterator()));
+
+            final var transformer = new InklessTopicMetadataTransformer(metadataView);
+            transformer.transformDescribeTopicResponse(LISTENER_NAME, "diskless_az=az0", describeResponse);
+
+            final var partition = describeResponse.topics().find(TOPIC_DISKLESS).partitions().get(0);
+            assertThat(partition.leaderId()).isEqualTo(-1);
+            assertThat(partition.errorCode()).isNotEqualTo(Errors.NONE.code());
+            assertThat(partition.isrNodes()).isEmpty();
+            assertThat(partition.offlineReplicas()).containsExactlyInAnyOrder(1, 3);
+            assertThat(partition.eligibleLeaderReplicas()).isEmpty();
+            assertThat(partition.lastKnownElr()).isEmpty();
+            assertThat(partition.leaderEpoch()).isEqualTo(0);
+        }
     }
 }
